Decommission Amber Electric pricing service (#161)
